Add zio dependencies