@@ -2,10 +2,22 @@ name := "ChessChallengeScala"
 
 version := "1.0"
 
-scalaVersion := "2.11.8"
+scalaVersion := "2.12.10"
 
+val ZIOVersion = "1.0.0-RC16"
+
+val zioDependencies = Seq(
+  "dev.zio" %% "zio" % ZIOVersion,
+  "dev.zio" %% "zio-test" % ZIOVersion % "test",
+  "dev.zio" %% "zio-test-sbt" % ZIOVersion % "test",
+  "dev.zio" %% "zio-interop-cats" % "2.0.0.0-RC7",
+  "dev.zio" %% "zio-macros-core" % "0.5.0"
+)
+
+val testDependencies =  Seq("org.scalatest" %% "scalatest" % "3.0.8" % "test")
+
+val commonDependencies = zioDependencies ++ testDependencies
+ 
 connectInput in run := true
 
-libraryDependencies += "org.scalatest" %% "scalatest" % "2.2.1" % "test"
-
-javaOptions += "-XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -Xmx4g"
+libraryDependencies ++= commonDependencies
